[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chaos-forge"
version = "0.1.0"
description = "A lightweight chaos-engineering toolkit for HTTP services: inject faults, validate steady-state hypotheses, and report resilience gaps."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Vamsi Krishna Unnam", email = "vamsik8629@gmail.com" }]
keywords = ["chaos-engineering", "resilience", "sre", "fault-injection", "reliability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
]
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
chaosforge = "chaosforge.cli:main"

[project.urls]
Homepage = "https://github.com/vk86294140-cloud/chaos-forge"
Issues = "https://github.com/vk86294140-cloud/chaos-forge/issues"

[tool.setuptools.packages.find]
include = ["chaosforge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
